--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,11 +11,11 @@
                 // Arquivos compilados por padrão (não mexer, na boa ^_-)
                     "main.cpp",
                     "greet.hpp",
-                    "-I scripts",
+                    "-I utils",
 
                 // Insira aqui os cabeçalhos que serão carregados pelo arquivo main.cpp
                     // "src/caminho/example.hpp",
-                    
+                    "src/backtracking/maze_resolver.hpp",
                 "-o",
                 "output/instance"
             ],
