:wrench: Adicionando pasta utils para compilação de projetos

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -36,6 +36,7 @@
                 "-g",
                 // Insira aqui o caminho para o projeto.
                     // projects/example.cpp
+                "-I utils",
 
                 "-o",
                 "output/project"
