--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -36,8 +36,9 @@
                 "-g",
                 "-I utils",
 
-                // Insira aqui o caminho para o projeto.
-                    // projects/example.cpp
+                // Insira aqui o codigo-fonte do projeto e seus cabeçalhos.
+                    // "-I projects/example/libs",
+                    // "projects/example/main.cpp",
 
                 "-o",
                 "output/project"
